src/objects/Screening_Phase_CRF_Report__c.object
<CustomObject>
    <fields>
        <fullName>Baseline_symptom_Approved__c</fullName>
        <label>Baseline symptom Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_symptom_submitted__c</fullName>
        <label>Baseline symptom submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blood_Pre_Tx_Submitted__c</fullName>
        <label>Blood Pre Tx Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mamma_Print_Submitted__c</fullName>
        <label>Mamma Print Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Screening Phase CRF Reports</relationshipLabel>
        <relationshipName>Screening_Phase_CRF_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Eval_Approved__c</fullName>
        <label>Response Eval Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Eval_Submitted__c</fullName>
        <label>Response Eval Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tissue_Pre_Tx_Submitted__c</fullName>
        <label>Tissue Pre Tx Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialSite__c</fullName>
        <label>TrialSite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Screening Phase CRF Report</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Screening Phase CRF Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>